
  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

    YARN-4690. Skip object allocation in FSAppAttempt#getResourceUsage when
    possible (Ming Ma via sjlee)

    YARN-5262. Optimize sending RMNodeFinishedContainersPulledByAMEvent for
    every AM heartbeat (Rohith Sharma K S via jlowe)

    YARN-5483. Optimize RMAppAttempt#pullJustFinishedContainers (sandflee via
    jlowe)

  BUG FIXES

    YARN-2046. Out of band heartbeats are sent only on container kill and
    possibly too early (Ming Ma via jlowe)

    YARN-4722. AsyncDispatcher logs redundant event queue sizes (Jason Lowe via
    sjlee)

    YARN-4761. NMs reconnecting with changed capabilities can lead to wrong cluster
    resource calculations on fair scheduler. (Sangjin Lee via zxu)

    YARN-4785. inconsistent value type of the "type" field for LeafQueueInfo in
    response of RM REST API. (Varun Vasudev via junping-du)

    YARN-4773. Log aggregation performs extraneous filesystem operations when
    rolling log aggregation is disabled (Jun Gong via jlowe)

    YARN-4459. container-executor should only kill process groups (Jun Gong
    via jlowe)

    YARN-5206. RegistrySecurity includes id:pass in exception text if
    considered invalid (Steve Loughran via jlowe)

    YARN-5197. RM leaks containers if running container disappears from 
    node update. Contributed by Jason Lowe.

    YARN-4393. Fix intermittent test failure for TestResourceLocalizationService
    #testFailedDirsResourceRelease (Varun Saxana via rohithsharmaks)

    YARN-5353. ResourceManager can leak delegation tokens when they are shared across
    apps. (Jason Lowe via Varun Saxena)

    YARN-5462. TestNodeStatusUpdater.testNodeStatusUpdaterRetryAndNMShutdown
    fails intermittently (Eric Badger via jlowe)

    YARN-4573. Fix test failure in TestRMAppTransitions#testAppRunningKill and
    testAppKilledKilled. (Takashi Ohnishi via rohithsharmaks)

Release 2.6.4 - 2016-02-11

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
