@@ -19,6 +19,9 @@ Release 2.6.5 - UNRELEASED
     YARN-5483. Optimize RMAppAttempt#pullJustFinishedContainers (sandflee via
     jlowe)
 
+    YARN-5009. NMLeveldbStateStoreService database can grow substantially
+    leading to longer recovery times (jlowe)
+
   BUG FIXES
 
     YARN-2046. Out of band heartbeats are sent only on container kill and
